// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Synonym List should render correctly 1`] = `
<div>
  <div
    className="d-flex flex-wrap wrapper"
  >
    <Link
      className="link"
      key="syn1-0"
      replace={false}
      to="/?q=syn1"
    >
      syn1
    </Link>
    <Link
      className="link"
      key="syn2-1"
      replace={false}
      to="/?q=syn2"
    >
      syn2
    </Link>
    <Link
      className="link"
      key="syn3-2"
      replace={false}
      to="/?q=syn3"
    >
      syn3
    </Link>
    <ThemeButton
      className="link-button"
      onClick={[Function]}
    >
      Add Synonym
    </ThemeButton>
  </div>
  <AddWordDialog
    isOpen={false}
    open={false}
    reloadData={[Function]}
    title="Add synonym"
    toggle={[Function]}
    word={
      Object {
        "value": "",
      }
    }
  />
</div>
`;

exports[`Synonym List should render correctly for empty 1`] = `
<div>
  <div
    className="d-flex flex-wrap wrapper"
  >
    <div
      className="d-flex align-items-center mr-3"
    >
      No synonyms found.
    </div>
    <ThemeButton
      className="link-button"
      onClick={[Function]}
    >
      Add Synonym
    </ThemeButton>
  </div>
  <AddWordDialog
    isOpen={false}
    open={false}
    reloadData={[Function]}
    title="Add synonym"
    toggle={[Function]}
    word={
      Object {
        "value": "",
      }
    }
  />
</div>
`;
